[gd_scene load_steps=5 format=3 uid="uid://b4oks2v5nathm"]

[ext_resource type="Script" path="res://GameLevel.gd" id="1_sq7dy"]
[ext_resource type="Texture2D" uid="uid://drmvu1tlj7kx8" path="res://bg_gradient.tres" id="2_gti28"]
[ext_resource type="Texture2D" uid="uid://y1cmeax56con" path="res://icons/back.svg" id="4_kfd24"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bu4n7"]
content_margin_left = 5.0
content_margin_right = 5.0
bg_color = Color(0.14902, 0.14902, 0.14902, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 20.0
expand_margin_top = 10.0
expand_margin_right = 20.0
expand_margin_bottom = 20.0
shadow_size = 1
shadow_offset = Vector2(2, 2)

[node name="GameLevel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_sq7dy")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_gti28")

[node name="VictoryOverlay" type="CanvasLayer" parent="."]
layer = 50
visible = false

[node name="CenterContainer" type="CenterContainer" parent="VictoryOverlay"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VictoryPanel" type="PanelContainer" parent="VictoryOverlay/CenterContainer"]
layout_mode = 2
theme_type_variation = &"FlavorText"
theme_override_styles/panel = SubResource("StyleBoxFlat_bu4n7")

[node name="VBoxContainer" type="VBoxContainer" parent="VictoryOverlay/CenterContainer/VictoryPanel"]
layout_mode = 2

[node name="EndFlavorLabel" type="Label" parent="VictoryOverlay/CenterContainer/VictoryPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Some end of level text"
autowrap_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VictoryOverlay/CenterContainer/VictoryPanel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="MenuButton" type="Button" parent="VictoryOverlay/CenterContainer/VictoryPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Menu"

[node name="NextButton" type="Button" parent="VictoryOverlay/CenterContainer/VictoryPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Next Lesson"

[node name="BoxContainer" type="BoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5

[node name="Button" type="Button" parent="BoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(130, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Back"
icon = ExtResource("4_kfd24")
expand_icon = true

[node name="FlavorContainer" type="MarginContainer" parent="BoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="PanelContainer" type="PanelContainer" parent="BoxContainer/VBoxContainer/FlavorContainer"]
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2
theme_type_variation = &"FlavorText"

[node name="FlavorLabel" type="Label" parent="BoxContainer/VBoxContainer/FlavorContainer/PanelContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "This is some flavor text
explaining what to do in this level"
autowrap_mode = 3

[connection signal="pressed" from="VictoryOverlay/CenterContainer/VictoryPanel/VBoxContainer/HBoxContainer/MenuButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VictoryOverlay/CenterContainer/VictoryPanel/VBoxContainer/HBoxContainer/NextButton" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="BoxContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
